Add vendor code

--- a/views/orders.html
+++ b/views/orders.html
@@ -7,7 +7,7 @@
     </thead>
 
     <tbody ng-repeat="order in orders" on-finish-render>
-    <tr data-toggle="collapse" data-target="#{{order.id}}">
+    <tr data-toggle="collapse" data-target="#{{order.id}">
         <td>{{order.date}}</td>
         <td>{{order.subTotal}}</td>
         <td>{{order.orderStatus}}</td>
