--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -44,7 +44,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <select ng-model="customer" ng-options="c.name for c in customers" ng-change="customerChange()"></select>
+                <label>Choose customer:</label>
+                <select ng-model="customer" ng-change="customerChange()">
+                    <option ng-repeat="customer in customers">{{customer.name}}</option>
+                </select>
                 <button ng-click="placeOrder()">Place order</button>
             </div>
         </div>
