--- a/views/customers.html
+++ b/views/customers.html
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="customer in customers">
-        <td>{{customer.name}}</td>
+        <td>{{customer.name | capitalize}}</td>
         <td>{{customer.email}}</td>
         <td>{{customer.adress | capitalize}}</td>
         <td>{{customer.city | capitalize}}</td>
