--- a/views/orders.html
+++ b/views/orders.html
@@ -1,23 +1,47 @@
 
 <table class="table table-condensed">
     <thead>
-    <td>Date</td>
-    <td>Subtotal</td>
-    <td>Status</td>
+    <th>Date</th>
+    <th>Subtotal</th>
+    <th>Status</th>
     </thead>
 
     <tbody ng-repeat="order in orders" on-finish-render>
-    <tr data-toggle="collapse" data-target="#{{order.id}">
+    <tr data-toggle="collapse" data-target="#{{order.id}}">
         <td>{{order.date}}</td>
         <td>{{order.subTotal}}</td>
         <td>{{order.orderStatus}}</td>
     </tr>
     <tr>
-        <td class="hiddenRow">
+        <td class="hiddenRow" colspan="3"> netjes thanks :D
             <div id="{{order.id}}" class="collapse">
-                <h4>{{order.date}}</h4>
+                <table>
+                    <thead>
+                    <tr>
+                        <th style="width:80%">Product</th>
+                        <th style="width:10%">Price</th>
+                        <th style="width:10%">Quantity</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="product in order.products">
+                        <td data-th="Product">
+                            <div class="col-sm-2 hidden-xs"><img ng-src="{{product.image}}" alt="..." class="img-responsive"/></div>
+                            <div class="col-sm-10">
+                                <h4 class="nomaring">{{product.name}}</h4>
+                                <p>{{product.information}}</p>
+                            </div>
+                        </td>
+                        <td data-th="Price">{{product.price | currency: "€"}}</td>
+                        <td data-th="Quantity">
+                            <p>{{product.quantity}}</p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </td>
     </tr>
     </tbody>
 </table>
+
