finished order page finished deleting products from cart finished filtering in order page based on customer selection changed delete button text into fontAwesome icons

--- a/views/customers.html
+++ b/views/customers.html
@@ -18,7 +18,7 @@
         <td>{{customer.adress | capitalize}}</td>
         <td>{{customer.city | capitalize}}</td>
         <td><button class="btn btn-success" ng-click="editCustomer($index)">Edit</button></td>
-        <td><a ng-click="deleteCustomer($index)" class="btn btn-danger">Delete</a></td>
+        <td><a ng-click="deleteCustomer($index)" class="btn btn-danger fa fa-trash-o"></a></td>
     </tr>
     </tbody>
 </table>
