--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -26,7 +26,7 @@
             </td>
             <td data-th="Subtotal" class="text-center">{{product.price * product.quantity | currency: "€"}}</td>
             <td class="actions" data-th="">
-                <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
+                <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o" ng-click="removeFromCart($index)"></i></button>
             </td>
         </tr>
         </tbody>
