--- a/views/home.html
+++ b/views/home.html
@@ -1,2 +1,2 @@
 <homepageproducts></homepageproducts>
-<div id="snackbar">Product added to cart</div>
+<div  id="addToCartSB">Product added to cart</div>
