--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@ html {
 .table>tbody>tr>td, .table>tfoot>tr>td{
     vertical-align: middle;
 }
+.hiddenRow{
+    padding: 0 !important;
+}
 @media screen and (max-width: 600px) {
     table#cart tbody td .form-control{
         width:20%;
